hphp/hack/test/typecheck/expression_trees/instance_method_error.php.exp
ERROR: File "instance_method_error.php", line 7, characters 12-19:
Expression Trees do not support nullsafe property or instance method access (Parsing[1002])
